# QtFpsGame

./: .gitignore  CMakeLists.txt
qml/: Main.qml
qml/graphics/: AsyncTexture.qml  Environment.qml  Scene.qml
qml/objects/: AK47.qml  Floor.qml
qml/objects/materials/: MetalMaterial.qml
qml/physics/: Physics.qml
qml/player/: FPSCamera.qml  Player.qml
qml/ui/: LoadingScreen.qml
resources/meshes/: ak_47_mesh.mesh
src/: main.cpp
src/assets/: AssetManager.cpp  AssetManager.hpp
src/assets/texture/: Texture.cpp  Texture.hpp
src/input/: InputHandler.cpp  InputHandler.hpp
src/player/: PlayerController.cpp  PlayerController.hpp
